@@ -9,6 +9,15 @@
 # font encoding of choosen font: Cp1250, Cp1252, Cp1257, Cp1250, Identity-H, Identity-V, MacRoman
 #font.encoding=Cp1250
 
-# setting property certificate.checkValidity to false, you can disable validity and keyUsage checks 
-# i.e. checks that the certificate is currently valid and certificate purpose is "digitalSignature"
+# setting property certificate.checkValidity to false, you can disable validity checks 
 #certificate.checkValidity=false
+
+# setting property certificate.checkKeyUsage to false, you can disable keyUsage checks 
+# i.e. checks that the certificate purpose is "digitalSignature" or "nonRepudiation"
+#certificate.checkKeyUsage=false
+
+# setting property certificate.checkCriticalExtensions to false, you can disable critical extension checks 
+# i.e. checks that all certificate extensions marked as critical are supported (or known) by JSignPdf
+# JSignPdf currently supports only following critical extensions:
+# 	2.5.29.15 - KeyUsage
+#certificate.checkCriticalExtensions=false
