@@ -14,6 +14,7 @@ console.createOutPdf                  = Creating output PDF file: {0}
 console.createPdfReader               = Opening input PDF file: {0}
 console.createSignature               = Creating signature
 console.creatingTsaClient             = Creating TSA client.
+console.criticalExtensionNotSupported = Certificate {0} contains critical extension with OID "{1}" which is not recognized by JSignPdf - skipping.
 console.crlinfo.alreadyLoaded         = Downloaded CRL is already present. Skipping.
 console.crlinfo.crlSize               = Size of downloaded CRL: {0}
 console.crlinfo.distPointNotSupported = Distribution Points extension is not supported in given certificate.
