@@ -15,6 +15,7 @@ console.createOutPdf                  = Vytv\u00E1\u0159\u00EDm v\u00FDstupn\u00
 console.createPdfReader               = Otev\u00EDr\u00E1m vstupn\u00ED PDF: {0}
 console.createSignature               = Vytv\u00E1\u0159\u00EDm podpis
 console.creatingTsaClient             = Vytv\u00E1\u0159en\u00ED klienta pro TSA.
+console.criticalExtensionNotSupported = Certifik\u00E1t {0} obsahuje kritick\u00E9 roz\u0161\u00ED\u0159en\u00ED s OID "{1}", kter\u00E9 nebylo programem JSignPdf rozpozn\u00E1no. P\u0159eskakuji certifik\u00E1t.
 console.crlinfo.alreadyLoaded         = Sta\u017Een\u00E9 CRL je duplik\u00E1t n\u011Bkter\u00E9ho d\u0159\u00EDve nahran\u00E9ho.
 console.crlinfo.crlSize               = Velikost sta\u017Een\u00E9ho CRL: {0}
 console.crlinfo.distPointNotSupported = Roz\u0161\u00ED\u0159en\u00ED distribu\u010Dn\u00EDch bod\u016F (Distribution Points extension) nen\u00ED v dan\u00E9m certifik\u00E1tu podporov\u00E1no.
