@@ -4,37 +4,37 @@ certificationLevel.formFillAnnot = Formularfelder ausf\u00FCllen und Kommentare 
 certificationLevel.noChanges     = Keine Ver\u00E4nderungen erlaubt
 certificationLevel.notCertified  = Nicht zertifiziert
 
-console.closeStream           = Schlie\u00DFe erzeugten PDF Stream
-console.configureVisible      = Konfiguriere visuelle Signatur
-console.createImage           = Erzeuge Bild {0}
-console.createOutPdf          = Erzeuge PDF Ausgabedatei: {0}
-console.createPdfReader       = \u00D6ffne PDF Eingabedatei: {0}
-console.createSignature       = Erzeuge Signatur
-console.exception             = Es ist ein Problem aufgetreten
-console.finished.error        = Fertig: Erzeugen der Signatur fehlgeschlagen
-console.finished.ok           = Fertig: Signatur erfolgreich erzeugt
-console.getAliases            = Hole Schl\u00FCssel Alias
-console.getCertChain          = Hole Zertifikatskette
-console.getKeystoreType       = Hole Schl\u00FCsselbundtyp Instanz: {0}
-console.getPrivateKey         = Lade privaten Schl\u00FCssel
-console.loadKeystore          = Lade Schl\u00FCsselbund: {0}
-console.memoryError           = \r\nJava hat zu wenig Arbeitsspeicher. Versuchen Sie der JVM mehr Speicher zuzuteilen.\r\nF\u00FCgen Sie -Xmx<Speichergr\u00E4\u00DFe> an den Java Aufruf.\r\nz.B.: $java -Xmx512m  ... setzt die maximale Java Heap Gr\u00F6\u00DFe auf 512MB.\r\n
-console.processing            = Bearbeite (es kann ein wenig l\u00E4nger dauern) ...
-console.setAcro6Layers        = Setze Acro6 Ebenen
-console.setCertificationLevel = Setze Zertifizierungsstufe
-console.setContact            = Setze Kontakt: {0}
-console.setEncryption         = Setze Verschl\u00FCsselung
-console.setImage              = Setze Hintergrundbild
-console.setImageScale         = Skaliere Hintergrundbild
-console.setL2Text             = Setze Text der Ebene 2 (Beschreibung)
-console.setL4Text             = Setze Text der Ebene 4 (Status)
-console.setLocation           = Setze Ort: {0}
-console.setReason             = Setze Begr\u00FCndung: {0}
-console.setRender             = Setze Renderverfahren
-console.setSignatureGraphic   = Setze Bild
-console.setVisibleSignature   = Erzeuge visuelle Signatur
-console.starting              = Starte PDF Signierer
-console.usedKeyAlias          = Verwendet Schl\u00FCssel: {0}
+console.closeStream                   = Schlie\u00DFe erzeugten PDF Stream
+console.configureVisible              = Konfiguriere visuelle Signatur
+console.createImage                   = Erzeuge Bild {0}
+console.createOutPdf                  = Erzeuge PDF Ausgabedatei: {0}
+console.createPdfReader               = \u00D6ffne PDF Eingabedatei: {0}
+console.createSignature               = Erzeuge Signatur
+console.exception                     = Es ist ein Problem aufgetreten
+console.finished.error                = Fertig: Erzeugen der Signatur fehlgeschlagen
+console.finished.ok                   = Fertig: Signatur erfolgreich erzeugt
+console.getAliases                    = Hole Schl\u00FCssel Alias
+console.getCertChain                  = Hole Zertifikatskette
+console.getKeystoreType               = Hole Schl\u00FCsselbundtyp Instanz: {0}
+console.getPrivateKey                 = Lade privaten Schl\u00FCssel
+console.loadKeystore                  = Lade Schl\u00FCsselbund: {0}
+console.memoryError                   = \r\nJava hat zu wenig Arbeitsspeicher. Versuchen Sie der JVM mehr Speicher zuzuteilen.\r\nF\u00FCgen Sie -Xmx<Speichergr\u00E4\u00DFe> an den Java Aufruf.\r\nz.B.: $java -Xmx512m  ... setzt die maximale Java Heap Gr\u00F6\u00DFe auf 512MB.\r\n
+console.processing                    = Bearbeite (es kann ein wenig l\u00E4nger dauern) ...
+console.setAcro6Layers                = Setze Acro6 Ebenen
+console.setCertificationLevel         = Setze Zertifizierungsstufe
+console.setContact                    = Setze Kontakt: {0}
+console.setEncryption                 = Setze Verschl\u00FCsselung
+console.setImage                      = Setze Hintergrundbild
+console.setImageScale                 = Skaliere Hintergrundbild
+console.setL2Text                     = Setze Text der Ebene 2 (Beschreibung)
+console.setL4Text                     = Setze Text der Ebene 4 (Status)
+console.setLocation                   = Setze Ort: {0}
+console.setReason                     = Setze Begr\u00FCndung: {0}
+console.setRender                     = Setze Renderverfahren
+console.setSignatureGraphic           = Setze Bild
+console.setVisibleSignature           = Erzeuge visuelle Signatur
+console.starting                      = Starte PDF Signierer
+console.usedKeyAlias                  = Verwendet Schl\u00FCssel: {0}
 
 default.l2text.signedBy = Digital unterschrieben von
 
