@@ -1,3 +1,10 @@
+2010-10-06 Josef Cacek
+  * additional Certificate checks implemented
+  * Certificate checks can be disabled in conf.properties under following keys:
+    - certificate.checkValidity checks the time validity
+    - certificate.checkKeyUsage checks if keyUsage extension contains "digitalSignature" or "nonRepudiation" bits set
+    - certificate.checkCriticalExtensions checks if the certificate contains only supported critical extensions (only KeyUsage in this time)
+
 2010-08-24 Josef Cacek (1.0.3)
   * Windows verifier launcher Verify.exe
   * Previous/Next page buttons in PDF preview window 
